# realsense_image_saver

./: CMakeLists.txt  README.md  package.xml
launch/: image_saver.launch  ur_robot.launch
src/: image_saver.py  test.py  ur_robot.py
