<?xml version="1.0"?>
<package>
  <name>realsense_image_saver</name>
  <version>0.9.0</version>
  <description>
    This package attempts to save image from realsense
  </description>
  <maintainer email="boophopi@gmail.com">JunaJeon</maintainer>
  <license>BSD</license>
  <author>JunaJeon</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
